# rust_embedded_project_helper

./: Cargo.toml  Makefile  README.md  REQUIREMENTS.md  design.md
.github/workflows/: ci.yml
src/: main.rs
tests/: cli_project_test.rs
