[package]
name = "multi-target-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "CLI tool for managing multi-target Rust embedded projects"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/multi-target-rs"
keywords = ["embedded", "cli", "rust", "hal", "cross-platform"]
categories = ["command-line-utilities", "development-tools", "embedded"]

[[bin]]
name = "multi-target-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

